discussion/kv_engine/145696/145696_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44140: Return status from CouchKVStore::readLocalDoc

We shouldn't assume the success of the CouchKVStore::readLocalDoc
function. We should pass the status back up to the caller. This patch
returns the status from the function but does not add any extra
handling in non-success cases. That will be added in a future patch.

Change-Id: Idfcb918b603c0cabc7c994d1ca23bde2fa851cb2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-02-10 15:58:35.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-10 16:17:54.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7046/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3820:13: error: assigning to "<overloaded function type>" from incompatible type "std::pair<couchstore_error_t, CouchKVStore::LocalDocHolder>" [clang-diagnostic-error]
            readLocalDoc(db, Collections::droppedCollectionsName);
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7046/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3820:13:
error: assigning to "<overloaded function type>" from incompatible type "std::pair<couchstore_error_t, CouchKVStore::LocalDocHolder>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7046/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33526/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(3820): error C2659: "=": function as left operand ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33526/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28842/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3820:13:
error: assigning to "<overloaded function type>" from incompatible type "std::pair<couchstore_error_t, CouchKVStore::LocalDocHolder>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7689/ : FAILURE

Compile error at [2021-02-10T15:59:36.015Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3820:13:
error: assigning to "<overloaded function type>" from incompatible type "std::pair<couchstore_error_t, CouchKVStore::LocalDocHolder>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7689/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8637/ : FAILURE

Compile error at [2021-02-10T16:04:51.618Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3819:5:
error: insufficient contextual information to determine type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8637/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8768/ : FAILURE

Compile error at [2021-02-10T16:06:13.142Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3819:5:
error: insufficient contextual information to determine type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8983/ : FAILURE

Compile error at [2021-02-10T15:59:42.652Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3820:13:
error: assigning to "<overloaded function type>" from incompatible type "std::pair<couchstore_error_t, CouchKVStore::LocalDocHolder>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8983/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16526/ : FAILURE

Compile error at [2021-02-10T16:13:19.313Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3820:13:
error: assigning to "<overloaded function type>" from incompatible type "std::pair<couchstore_error_t, CouchKVStore::LocalDocHolder>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16526/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5583/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
